# blur-effect

./: API_DOCUMENTATION.md  CMakeLists.txt  README.md  UNIT_TESTS_SUMMARY.md
src/: blur_image.cc  blur_utils.cc  blur_utils.h  main.cc
tests/: README.md  test_device_utils.cc  test_gaussian_kernel.cc  test_shader_utils.cc
